Use Gradle Worker API to run spotless