@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2020 DiffPlug
+ * Copyright 2016-2021 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,24 +17,55 @@ package com.diffplug.gradle.spotless;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import javax.inject.Inject;
 
 import org.gradle.api.GradleException;
+import org.gradle.api.JavaVersion;
+import org.gradle.api.file.FileSystemOperations;
+import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.CacheableTask;
 import org.gradle.api.tasks.TaskAction;
 import org.gradle.work.ChangeType;
 import org.gradle.work.FileChange;
 import org.gradle.work.InputChanges;
+import org.gradle.workers.WorkAction;
+import org.gradle.workers.WorkParameters;
+import org.gradle.workers.WorkQueue;
+import org.gradle.workers.WorkerExecutor;
 
 import com.diffplug.common.base.StringPrinter;
 import com.diffplug.spotless.Formatter;
 import com.diffplug.spotless.PaddedCell;
 
 @CacheableTask
-public class SpotlessTaskImpl extends SpotlessTask {
+public abstract class SpotlessTaskImpl extends SpotlessTask {
+
+	private static final List<String> JAVA_16_EXPORTS;
+
+	static {
+		List<String> java16Exports = new ArrayList<>();
+		java16Exports.add("--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED");
+		java16Exports.add("--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED");
+		java16Exports.add("--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED");
+		java16Exports.add("--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED");
+		java16Exports.add("--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
+		JAVA_16_EXPORTS = Collections.unmodifiableList(java16Exports);
+	}
+
+	@Inject
+	public abstract WorkerExecutor getWorkerExecutor();
+
 	@TaskAction
 	public void performAction(InputChanges inputs) throws Exception {
 		if (target == null) {
@@ -47,67 +78,125 @@ public class SpotlessTaskImpl extends SpotlessTask {
 			Files.createDirectories(outputDirectory.toPath());
 		}
 
+		final WorkQueue workQueue;
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+			workQueue = getWorkerExecutor().processIsolation(worker -> worker.getForkOptions().jvmArgs(JAVA_16_EXPORTS));
+		} else {
+			workQueue = getWorkerExecutor().noIsolation();
+		}
+
 		try (Formatter formatter = buildFormatter()) {
 			for (FileChange fileChange : inputs.getFileChanges(target)) {
 				File input = fileChange.getFile();
-				if (fileChange.getChangeType() == ChangeType.REMOVED) {
+				boolean isClean = ratchet != null && ratchet.isClean(getProject(), rootTreeSha, input);
+				workQueue.submit(SpotlessWorkAction.class, params -> {
+					params.getInput().set(input);
+					params.getOutputDirectory().set(outputDirectory);
+					params.getProjectDirectory().set(getProject().getProjectDir());
+					params.getProjectPath().set(getProject().getPath());
+					params.getChangeType().set(fileChange.getChangeType());
+					params.getFormatter().set(formatter);
+					params.getIsClean().set(isClean);
+				});
+			}
+		}
+	}
+
+	interface SpotlessWorkParameters extends WorkParameters {
+		Property<File> getInput();
+
+		Property<File> getOutputDirectory();
+
+		Property<File> getProjectDirectory();
+
+		Property<String> getProjectPath();
+
+		Property<ChangeType> getChangeType();
+
+		Property<Formatter> getFormatter();
+
+		Property<Boolean> getIsClean();
+	}
+
+	abstract static class SpotlessWorkAction implements WorkAction<SpotlessWorkParameters> {
+
+		private final FileSystemOperations fileSystemOperations;
+
+		@Inject
+		public SpotlessWorkAction(FileSystemOperations fileSystemOperations) {
+			this.fileSystemOperations = fileSystemOperations;
+		}
+
+		@Override
+		public void execute() {
+			Formatter formatter = getParameters().getFormatter().get();
+			File input = getParameters().getInput().get();
+			try {
+				if (getParameters().getChangeType().get() == ChangeType.REMOVED) {
 					deletePreviousResult(input);
 				} else {
 					if (input.isFile()) {
 						processInputFile(formatter, input);
 					}
 				}
+			} catch (IOException e) {
+				throw new UncheckedIOException(e);
+			} finally {
+				formatter.close();
 			}
 		}
-	}
 
-	private void processInputFile(Formatter formatter, File input) throws IOException {
-		File output = getOutputFile(input);
-		getLogger().debug("Applying format to " + input + " and writing to " + output);
-		PaddedCell.DirtyState dirtyState;
-		if (ratchet != null && ratchet.isClean(getProject(), rootTreeSha, input)) {
-			dirtyState = PaddedCell.isClean();
-		} else {
-			dirtyState = PaddedCell.calculateDirtyState(formatter, input);
-		}
-		if (dirtyState.isClean()) {
-			// Remove previous output if it exists
-			Files.deleteIfExists(output.toPath());
-		} else if (dirtyState.didNotConverge()) {
-			getLogger().warn("Skipping '" + input + "' because it does not converge.  Run `spotlessDiagnose` to understand why");
-		} else {
-			Path parentDir = output.toPath().getParent();
-			if (parentDir == null) {
-				throw new IllegalStateException("Every file has a parent folder.");
+		private void deletePreviousResult(File input) throws IOException {
+			File output = getOutputFile(input);
+			if (output.isDirectory()) {
+				final List<File> toDelete;
+				try (Stream<Path> s = Files.walk(output.toPath())) {
+					toDelete = s.sorted(Comparator.reverseOrder())
+							.map(Path::toFile)
+							.collect(Collectors.toList());
+				}
+				fileSystemOperations.delete(spec -> spec.delete(toDelete));
+			} else {
+				fileSystemOperations.delete(spec -> spec.delete(output));
 			}
-			Files.createDirectories(parentDir);
-			// Need to copy the original file to the tmp location just to remember the file attributes
-			Files.copy(input.toPath(), output.toPath(), StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
-			dirtyState.writeCanonicalTo(output);
 		}
-	}
 
-	private void deletePreviousResult(File input) throws IOException {
-		File output = getOutputFile(input);
-		if (output.isDirectory()) {
-			Files.walk(output.toPath())
-					.sorted(Comparator.reverseOrder())
-					.map(Path::toFile)
-					.forEach(File::delete);
-		} else {
-			Files.deleteIfExists(output.toPath());
+		private void processInputFile(Formatter formatter, File input) throws IOException {
+			File output = getOutputFile(input);
+			final PaddedCell.DirtyState dirtyState;
+			if (Boolean.TRUE.equals(getParameters().getIsClean().get())) {
+				dirtyState = PaddedCell.isClean();
+			} else {
+				dirtyState = PaddedCell.calculateDirtyState(formatter, input);
+			}
+			if (dirtyState.isClean()) {
+				// Remove previous output if it exists
+				fileSystemOperations.delete(spec -> spec.delete(output));
+			} else if (dirtyState.didNotConverge()) {
+				System.out.println("Skipping '" + input + "' because it does not converge.  Run `spotlessDiagnose` to understand why");
+			} else {
+				Path parentDir = output.toPath().getParent();
+				if (parentDir == null) {
+					throw new IllegalStateException("Every file has a parent folder.");
+				}
+				Files.createDirectories(parentDir);
+				// Need to copy the original file to the tmp location just to remember the file attributes
+				Files.copy(input.toPath(), output.toPath(), StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+				dirtyState.writeCanonicalTo(output);
+			}
 		}
-	}
 
-	private File getOutputFile(File input) {
-		String outputFileName = FormatExtension.relativize(getProject().getProjectDir(), input);
-		if (outputFileName == null) {
-			throw new IllegalArgumentException(StringPrinter.buildString(printer -> {
-				printer.println("Spotless error! All target files must be within the project root. In project " + getProject().getPath());
-				printer.println("  root dir: " + getProject().getProjectDir().getAbsolutePath());
-				printer.println("    target: " + input.getAbsolutePath());
-			}));
+		private File getOutputFile(File input) {
+			File projectDir = getParameters().getProjectDirectory().get();
+			String outputFileName = FormatExtension.relativize(projectDir, input);
+			if (outputFileName == null) {
+				throw new IllegalArgumentException(StringPrinter.buildString(printer -> {
+					printer.println("Spotless error! All target files must be within the project root. In project " + getParameters().getProjectPath().get());
+					printer.println("  root dir: " + projectDir.getAbsolutePath());
+					printer.println("    target: " + input.getAbsolutePath());
+				}));
+			}
+			return new File(getParameters().getOutputDirectory().get(), outputFileName);
 		}
-		return new File(outputDirectory, outputFileName);
 	}
 }
